# heretto-deploy-mcp

./: BEST_PRACTICES.md  README.md  pyproject.toml  requirements.txt  setup.sh
src/heretto_mcp/: __main__.py  client.py  server.py  setup.sh
