[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heretto-deploy-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Heretto Deploy API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/heretto-deploy-mcp"
Issues = "https://github.com/yourusername/heretto-deploy-mcp/issues"

[project.scripts]
heretto-deploy-mcp = "heretto_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/heretto_mcp"]